[project]
name = "edge-python-template"
version = "0.1.0"
description = "PUDA machine edge service template"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "puda>=0.0.16",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "psutil>=6.1.1",
]